# fifo-flim

./: BH.cpp  BH.h  BHWidget.ui  CMakeLists.txt  EventProcessor.cpp  EventProcessor.h  FLIMage.cpp  FLIMage.h  FifoTcspc.cpp  FifoTcspc.h  FifoTcspcFactory.h  FlimDataSource.cpp  FlimDataSource.h  FlimFileReader.h  FlimFileWriter.cpp  FlimFileWriter.h  LZ4Stream.h  LZ4ThreadedStream.h  LiveFlimReader.cpp  LiveFlimReader.h  PLIMLaserModulator.h  PacketBuffer.h  PhotonBuffer.h  SimTcspc.cpp  SimTcspc.h  TcspcEvent.h  chronologic.cpp  chronologic.h  cronologic.cpp  cronologic.h
cmake/: FindBeckerHickl.cmake  FindCronologic.cmake
